...
                            dative = DativeDeclension("karte"),
                            accusative = AccusativeDeclension("kartë"),
                            ablative = AblativeDeclension("karte"),
                        ),
                        singularDefinite = AlbanianDeclensions(
                            nominative = NominativeDeclension("karta"),
                            genitive = GenitiveDeclension("kartës"),
                            dative = DativeDeclension("kartës"),
                            accusative = AccusativeDeclension("kartën"),
                            ablative = AblativeDeclension("kartës"),
                        ),
                        pluralIndefinite = AlbanianDeclensions(
                            nominative = NominativeDeclension("karta"),
...
